# novalis

./: .gitignore  Cargo.toml  GIT_SYNC_SPIKE.md  LICENSE  MOBILE.md  README.md  RELEASING.md  TIER1_PLAN.md  TIER2_PLAN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.cargo/: audit.toml
.github/workflows/: bundle-smoke.yml  ci.yml  release.yml
apps/desktop/: package.json
apps/desktop/android/: MainActivity.kt
apps/desktop/frontend/: eslint.config.js  i18next-parser.config.js  index.html  package.json  vite.config.ts
apps/desktop/frontend/src/: App.tsx  main.tsx  styles.css
apps/desktop/frontend/src/components/: ActivityRail.tsx  CalendarView.tsx  CanvasView.tsx  Cheatsheet.tsx  CloudHint.tsx  CommandPalette.tsx  ConflictModal.tsx  ContextMenu.tsx  EditorPane.tsx  EntitiesPanel.tsx  FindBar.tsx  GraphModal.tsx  GraphView.tsx  LinksPanel.tsx  MergeConflictModal.tsx  NotePickerModal.tsx  Onboarding.tsx  OutlinePanel.tsx  PdfPicker.tsx  PdfViewer.tsx  PropertiesPanel.tsx  QueryView.tsx  RelatedPanel.tsx  SearchModal.tsx  SettingsModal.tsx  Sidebar.tsx  TabStrip.tsx  TaskCardMenu.tsx  TasksView.tsx  TodayView.tsx  TrashModal.tsx  VaultChatPanel.tsx  VaultGate.tsx  VersionHistoryModal.tsx  WikiLinkHoverCard.tsx  WorkspaceLayout.tsx
apps/desktop/frontend/src/components/__tests__/: CanvasView.test.tsx  ContextMenu.test.tsx  PdfViewer.test.tsx  QueryView.test.tsx  TodayView.test.tsx  VaultChatPanel.test.tsx
apps/desktop/frontend/src/components/ai/: AiActionMenu.tsx  AiActionPanel.tsx  AiMetaSuggestions.tsx  AmbientSuggestions.tsx  RewriteReviewBar.tsx  TaskExtractReview.tsx
apps/desktop/frontend/src/components/help/: HelpGuide.tsx
apps/desktop/frontend/src/components/settings/: SettingsModal.tsx  SettingsNav.tsx
apps/desktop/frontend/src/components/ui/: ChipInput.tsx  ColorSwatchPicker.tsx  ConfirmDialog.tsx  Disclosure.tsx  ErrorBoundary.tsx  Modal.tsx  NumberField.tsx  SegmentedControl.tsx  Select.tsx  SettingRow.tsx  SettingsSection.tsx  Switch.tsx  TextField.tsx  index.ts
apps/desktop/frontend/src/components/voice/: RecordingDock.tsx  VoiceCaptureButton.tsx
apps/desktop/frontend/src/help/: loadHelp.ts  querySyntax.ts  registry.ts
apps/desktop/frontend/src/help/__tests__/: registry.test.ts
apps/desktop/frontend/src/ipc/: api.ts  bindings.ts
apps/desktop/frontend/src/lib/: appearance.ts  canvas.ts  citations.ts  colors.ts  datetime.ts  errors.ts  features.ts  globalErrors.ts  i18n.ts  keybindings.ts  language.ts  pdf.ts  pdfTextLayer.css  railPrefs.ts  reminderScheduler.ts  reminders.ts  sidebarPrefs.ts  taskDisplay.ts  taskExtract.ts  themePreset.ts  uiPrefs.ts  useAiEvents.ts  useDismiss.ts  useNovalisEvents.ts  workspacePrefs.ts
apps/desktop/frontend/src/lib/__tests__/: canvas.test.ts  citations.test.ts  features.test.ts  findMatches.test.ts  globalErrors.test.ts  i18n.test.ts  keybindings.test.ts  mathMatches.test.ts  parseCallout.test.ts  pdf.test.ts  reminderScheduler.test.ts  reminders.test.ts  taskDisplay.test.ts  taskExtract.test.ts
apps/desktop/frontend/src/locales/: README.md
apps/desktop/frontend/src/locales/__tests__/: catalogs.test.ts
apps/desktop/frontend/src/locales/de/: ai.json  calendar.json  common.json  editor.json  help.json  links.json  onboarding.json  pdf.json  settings.json  sidebar.json  tasks.json  today.json  vault.json  versions.json
apps/desktop/frontend/src/locales/en/: ai.json  calendar.json  common.json  editor.json  help.json  links.json  onboarding.json  pdf.json  settings.json  sidebar.json  tasks.json  today.json  vault.json  versions.json
apps/desktop/frontend/src/locales/es/: ai.json  common.json  (+12 more)
apps/desktop/frontend/src/stores/: agendaStore.ts  aiStore.ts  calendarStore.ts  canvasStore.ts  gitConflictStore.ts  keymapStore.ts  pdfStore.ts  pluginStore.ts  settingsStore.ts  taskStore.ts  uiStore.ts  vaultChatStore.ts  vaultStore.ts  voiceStore.ts
apps/desktop/frontend/src/types/: i18next.d.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: gen_bindings.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: autocommit.rs  commands.rs  engine.rs  lib.rs  main.rs  oauth.rs  secrets.rs  settings.rs  watcher.rs
apps/desktop/src-tauri/src/ai/: anthropic.rs  catalog.rs  cli.rs  commands.rs  embed_local.rs  embeddings.rs  entities.rs  keychain.rs  mod.rs  openai_compat.rs  registry.rs  templates.rs
apps/desktop/src-tauri/src/sync/: endpoint.rs  mod.rs  service.rs  session.rs
apps/desktop/src-tauri/src/voice/: capture.rs  commands.rs  mod.rs  transcribe.rs
crates/novalis-core/: Cargo.toml
crates/novalis-core/src/: error.rs  help_demo.rs  lib.rs  tour.rs
crates/novalis-core/src/ai/: action.rs  mod.rs  rag.rs  sse.rs
crates/novalis-core/src/calendar/: mod.rs  remote.rs  source.rs
crates/novalis-core/src/change/: mod.rs
crates/novalis-core/src/conflict/: mod.rs
crates/novalis-core/src/export/: mod.rs
crates/novalis-core/src/git/: mod.rs
crates/novalis-core/src/index/: blocks.rs  entities.rs  links.rs  mod.rs  properties.rs  schema.rs  search.rs  vectors.rs
crates/novalis-core/src/media/: mod.rs
crates/novalis-core/src/models/: ai.rs  git.rs  mod.rs  note.rs  preferences.rs  search.rs  sync.rs  task.rs  template.rs  vault.rs
crates/novalis-core/src/notes/: mod.rs
crates/novalis-core/src/pdf/: mod.rs
crates/novalis-core/src/sync/: crypto.rs  identity.rs  manifest.rs  mod.rs  protocol.rs  store.rs  ticket.rs
crates/novalis-core/src/tasks/: index.rs  mod.rs  nldate.rs  service.rs
crates/novalis-core/src/templates/: mod.rs
crates/novalis-core/src/trash/: mod.rs
crates/novalis-core/src/vault/: canvas.rs  config.rs  frontmatter.rs  fs.rs  mod.rs  stats.rs
crates/novalis-core/src/versions/: mod.rs
crates/novalis-extension/: Cargo.toml
crates/novalis-extension/src/: lib.rs
docker/: linux-build.Dockerfile
scripts/: android-env.sh  android-overrides.sh  build-linux-container.sh  check-versions.mjs  gen-placeholder-icon.mjs
(+40 files in other folders)
