[workspace]
resolver = "2"
members = [
    "crates/novalis-core",
    "crates/novalis-extension",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Sebastian Grundhoefer <sebastiangrundhoefer@gmail.com>"]
# Matches rust-toolchain.toml: specta 2.0.0-rc.25 needs 1.93 (`core::fmt::from_fn`).
rust-version = "1.93"

[workspace.dependencies]
# Shared, UI-agnostic dependencies. Crates pull what they need.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
# Git engine (sync P2): HTTPS only — ssh is deliberately absent per the
# maintainer sign-off (PAT-first). Vendored openssl/libgit2 keep the shipped
# artifact self-contained (a non-vendored build links Homebrew dylibs —
# verified undeliverable in the engine spike).
git2 = { version = "0.21", default-features = false, features = [
    "https",
    "vendored-openssl",
    "vendored-libgit2",
] }
# Type export — pinned: specta + tauri-specta must share the same rc.
specta = { version = "=2.0.0-rc.25", features = ["derive", "chrono", "uuid"] }

# In-workspace crates
novalis-core = { path = "crates/novalis-core" }
novalis-extension = { path = "crates/novalis-extension" }

[profile.release]
# Smaller, faster binaries — matters for a desktop app we distribute.
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
