[package]
name = "novalis-core"
description = "UI-agnostic core logic for Novalis (vault, index, notes, tasks, calendar)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
specta.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
gray_matter = "0.2"
serde_yaml = "0.9"
walkdir = "2"
regex = "1"
log = "0.4"
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
