[package]
name = "novalis-core"
description = "UI-agnostic core logic for Novalis (vault, index, notes, tasks, calendar)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
specta.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
gray_matter = "0.2"
serde_yaml = "0.9"
walkdir = "2"
regex = "1"
log = "0.4"
sha2 = "0.10"
pulldown-cmark = "0.12"
docx-rs = "0.4"
icalendar = "0.17"
rrule = "0.14"
similar = "2"
uuid = { workspace = true }
git2 = { workspace = true }
# P2P sync (W4.4): pure crypto/framing/pairing logic. `chacha20poly1305`
# (XChaCha20-Poly1305 AEAD) seals file contents E2E; `postcard` frames the
# wire protocol; `base64` encodes the pairing ticket. All pure-Rust — no
# openssl — so they add nothing to the openssl isolation surface. The async
# `iroh` QUIC transport lives in the desktop shell, not here.
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.22"
postcard = { version = "1", features = ["use-std"] }
# Pure-Rust HNSW: the native ANN backing chunk-level semantic retrieval. Chosen
# over the sqlite-vec vec0 extension so the multi-model/variable-dim vectors that
# already coexist in one table stay supported, queries run off the engine
# write-lock, and no process-global C extension has to be loaded — see
# `index::vectors::VectorIndex`.
hnsw_rs = "0.3"

[dev-dependencies]
tempfile = "3"
