[package]
name = "novalis-desktop"
description = "Novalis desktop app (Tauri v2 shell)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
# Two binaries live here (the app and the bindings generator). `tauri dev`
# runs `cargo run`, which needs to pick one; default to the app.
default-run = "novalis-desktop"

# Tauri requires a lib (used by desktop bin and mobile entry points) plus a thin
# binary that calls into it.
[lib]
name = "novalis_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
specta.workspace = true
specta-typescript = "0.0.12"
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "7"
notify-debouncer-mini = "0.5"
regex = "1"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
base64 = "0.22"
sha2 = "0.10"
uuid = { workspace = true }
novalis-core.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
