[package]
name = "novalis-desktop"
description = "Novalis desktop app (Tauri v2 shell)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

# Tauri requires a lib (used by desktop bin and mobile entry points) plus a thin
# binary that calls into it.
[lib]
name = "novalis_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
specta.workspace = true
specta-typescript = "0.0.12"
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "7"
notify-debouncer-mini = "0.5"
regex = "1"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json", "stream"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
base64 = "0.22"
sha2 = "0.10"
uuid = { workspace = true }
# Async AI streaming + local CLI providers. Tauri provides the tokio runtime;
# we enable sync (Notify), macros (select!), process (spawn CLIs), and io-util
# (async read/write of child stdio).
futures-util = "0.3"
tokio = { version = "1", default-features = false, features = ["sync", "macros", "process", "io-util", "rt"] }
novalis-core.workspace = true
tauri-plugin-log = "2"

[dev-dependencies]
# Tests only: `net` powers the hand-rolled localhost server that mocks the AI
# providers' HTTP endpoints; `time` bounds those tests with timeouts. These are
# feature additions to the tokio dependency above — no new crate.
tokio = { version = "1", default-features = false, features = ["net", "time"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

# On-device embeddings for fully-offline semantic search: `fastembed` runs
# bge-small-en-v1.5 through ONNX Runtime (`ort`) + HuggingFace tokenizers, as a
# selectable alternative to the OpenAI-compatible HTTP embeddings adapter.
# rustls variants only — the app is deliberately openssl-free (see `reqwest`
# above). `ort/download-binaries` links a prebuilt ONNX Runtime at build time;
# the model weights (~130 MB) download from HuggingFace on the first index build
# and cache under the app-data dir. Excluded on Android (no prebuilt ORT
# backend), mirroring the keyring/secrets desktop-only split.
[target.'cfg(not(target_os = "android"))'.dependencies]
fastembed = { version = "5", default-features = false, features = [
    "hf-hub-rustls-tls",
    "ort-download-binaries-rustls-tls",
] }
